testdata/baselines/reference/compiler/reachabilityChecksIgnored.errors.txt
reachabilityChecksIgnored(4,11): error TS1005: ';' expected.
reachabilityChecksIgnored(4,11): error TS1003: Identifier expected.
reachabilityChecksIgnored(4,11): error TS1005: ';' expected.
reachabilityChecksIgnored(4,11): error TS1003: Identifier expected.
reachabilityChecksIgnored(11,11): error TS1005: ';' expected.
reachabilityChecksIgnored(11,11): error TS1003: Identifier expected.
reachabilityChecksIgnored(11,11): error TS1005: ';' expected.
reachabilityChecksIgnored(11,11): error TS1003: Identifier expected.

==== reachabilityChecksIgnored (8 errors) ====
    
    
    function a() {
        throw new Error("");
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
    
        // @ts-ignore
        console.log("unreachable");
    }
    
    function b() {
        throw new Error("");
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
              ~~~
!!! error TS1005: ';' expected.
              ~~~
!!! error TS1003: Identifier expected.
    
        // @ts-expect-error
        console.log("unreachable");
    }
    
